# SCFD-mesh_proto

./: CMakeLists.txt  DESCRIPTION.md  README.md  TODO.md  cmake_gmsh_minimal_configure.sh
demos/: CMakeLists.txt
demos/gpu_poisson_solver/: CMakeLists.txt  bnd_all_period.cfg  bnd_all_zero_dirichle.cfg  bnd_two_dirichle.cfg  force_period.cfg  force_period_shift_0_3.cfg  force_zero.cfg  gmsh_pos_output.h  gpu_poisson_solver.cu  gpu_poisson_solver_config.h  map_mock.h  test_box3d_period.geo  test_box3d_period.msh  test_box3d_period_big_mesh.geo  test_box3d_period_big_mesh.msh
demos/host_poisson_solver/: CMakeLists.txt  gmsh_pos_output.h  host_poisson_solver.cpp  host_poisson_solver_config.h
include/scfd/arrays/: Makefile  arranger_base.h  tensor_array_nd.h  tensor_base.h  test_var_tensor1_array.cu  var_tensor1_array.h
include/scfd/communication/: communicator.h  faces_partitioner.h  mpi_communicator.h  nodes_partitioner.h  parted_map.h  serial_communicator.h
include/scfd/for_each/: cuda.h  cuda_impl.cuh  cuda_nd.h  cuda_nd_impl.cuh  for_each_func_macro.h  openmp.h  openmp_impl.h  openmp_nd.h  openmp_nd_impl.h  serial_cpu_nd.h
include/scfd/mesh/: cubature_reference.h  device_mesh.h  device_mesh_calc_props.h  device_mesh_funcs.h  device_mesh_impl.h  device_mesh_params.h  gmsh_mesh_elem_reference.h  gmsh_mesh_wrap.h  host_mesh.h  t_cubature_reference_tml.h
include/scfd/mesh/detail/: const_data_access.h  face_key.h  ranges_sparse_arr.h  sparse_arr.h
include/scfd/static_mat/: mat.h
include/scfd/static_vec/: vec.h
include/scfd/utils/: main_try_catch_macro.h
test/: CMakeLists.txt
test/mesh/: CMakeLists.txt  test.geo  test_box3d.msh  test_box3d_period_small_mesh.geo  test_box3d_period_small_mesh.msh  test_box3d_small_mesh.geo  test_box3d_small_mesh.msh  test_gmsh_cpp_api_geom.cpp  test_gmsh_mesh_wrap.cpp  test_host_mesh_gmsh_wrap.cpp
